Unificadas informações de vínculo de equipamentos.